--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -152,3 +152,20 @@ i {
 
 .winner { background-color: #f7f7f7; }
 .winner .player-name { font-weight: 300; color: #EB4D4D; }
+
+.form {
+  display: block;
+  text-align: center;
+  margin: 0;
+  padding-bottom: 15px;
+
+}
+
+#winning-points {
+  display: none;
+  text-align: center;
+}
+
+#double-six {
+  text-align: center;
+}
